--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply px-6 py-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-500 transition-all hover:border-gray-500/40 hover:text-red-400/40;
+  }
+}
