--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,7 @@
   .button {
     @apply px-6 py-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-500 transition-all hover:border-gray-500/40 hover:text-red-400/40;
   }
+  .inputcustom{
+    @apply outline-none bg-slate-400/10  rounded-sm border-b px-6 py-4 border-black text-white placeholder-red-300 transition-all focus:border-[#f7ab0a]/40 focus:text-gray-300 hover:border-[#f7ab0a]/40
+  }
 }
